--- a/ToolkitBoilerplate/appsettings.json
+++ b/ToolkitBoilerplate/appsettings.json
@@ -1,4 +1,20 @@
 {
+  "AuthTokenSecret": "[REPLACE]",
+  "ConnectionStrings": {
+    "Postgres": "User Id=[REPLACE]; Database=[REPLACE]; Password=[REPLACE]; Host=[REPLACE]; Port=5432;",
+    "Redis": "[REPLACE]"
+  },
+  "DistributedRedisName": "MyRedis",
+  "Sieve": {
+    "CaseSensitive": false,
+    "DefaultPageSize": 10,
+    "MaxPageSize": 20,
+    "ThrowExceptions": true
+  },
+  "JwtAuth": {
+    "AuthorityUrl": "https://cierge.azurewebsites.net",
+    "Audience": "demo-resource-server"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
