--- a/ToolkitBoilerplate/appsettings.Development.json
+++ b/ToolkitBoilerplate/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "AuthTokenSecret": "[REPLACE]",
+  "ConnectionStrings": {
+    "Postgres": "User Id=[REPLACE]; Database=[REPLACE]; Password=[REPLACE]; Host=[REPLACE]; Port=5432;",
+    "MSSQLLocalDB": "Server=(localdb)\\MSSQLLocalDB; Database=[REPLACE_NAME];",
+    "Redis": "[REPLACE]"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
