--- a/ToolkitBoilerplate/ClientApp/package.json
+++ b/ToolkitBoilerplate/ClientApp/package.json
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "nprogress": "^0.2.0",
     "register-service-worker": "^1.0.0",
+    "timeago.js": "^4.0.0-beta.1",
     "vue": "^2.5.17",
+    "vue-infinite-loading": "^2.4.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -19,6 +22,7 @@
     "@vue/cli-service": "^3.1.4",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "bulma": "^0.7.2",
     "typescript": "^3.0.0",
     "vue-template-compiler": "^2.5.17"
   },
