--- a/ToolkitBoilerplate/appsettings.json
+++ b/ToolkitBoilerplate/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "Recaptcha": {
+    "Secret":  "[REPLACE]"
+  },
   "AuthTokenSecret": "[REPLACE]",
   "ConnectionStrings": {
     "Postgres": "User Id=[REPLACE]; Database=[REPLACE]; Password=[REPLACE]; Host=[REPLACE]; Port=5432;",
